# KalmanFilter

./: .gitignore  CMakeLists.txt  SimPlot.py  actual_position.txt  bias_values.txt  d.py  data.txt  estimated_position.txt  plot.py
Python/: KalmanFilter2.py  KalmanFilter3.py
Python (test)/: Kalman filter1.py  rk4.py
Sim_data/: actual_orientation.txt  bias_orientation.txt  bias_postion.txt  estimated_orientation.txt  estimated_position.txt
data/: actual_position.txt  bias_values.txt  estimated_position.txt
include/: KF.h  KalmanFilter.h  MEKF.h  Simulate.h
src/: KalmanFilter.cpp  PoseEstimation.cpp  Simulate.cpp  data.txt  main.cpp
